Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7529

GIS: ST_Relate returns unexpected results for POINT relations

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • N/A
    • 10.1.4
    • GIS

    Description

      Two identical points

      ST_PointFromText('POINT(0 0)'),ST_PointFromText('POINT(0 0)')

      Equals (T*F**FFF*)

      MariaDB

      MariaDB [test]> select ST_Relate(ST_PointFromText('POINT(0 0)'),ST_PointFromText('POINT(0 0)'),'T*F**FFF*') AS equals;
      +--------+
      | equals |
      +--------+
      |      0 |
      +--------+
      1 row in set (0.00 sec)

      PostGIS

      pgis=# select ST_Relate(ST_PointFromText('POINT(0 0)'),ST_PointFromText('POINT(0 0)'),'T*F**FFF*') AS equals;
       equals 
      --------
       t
      (1 row)

      Same for Contains (T*****FF*), Covers (T*****FF*), Within (T*F**F***), Covered by (T*F**F***).

      Two different points

      ST_PointFromText('POINT(0 0)'),ST_PointFromText('POINT(1 1)')

      Disjoint

      MariaDB

      MariaDB [test]> select ST_Relate(ST_PointFromText('POINT(0 0)'),ST_PointFromText('POINT(1 1)'),'FF*FF****') as disjoint;
      +----------+
      | disjoint |
      +----------+
      |        0 |
      +----------+
      1 row in set (0.00 sec)

      PostGIS

      pgis=# select ST_Relate(ST_PointFromText('POINT(0 0)'),ST_PointFromText('POINT(1 1)'),'FF*FF****') as disjoint;
       disjoint 
      ----------
       t
      (1 row)

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.